--- a/exam_prep/question_2.tex
+++ b/exam_prep/question_2.tex
@@ -134,5 +134,98 @@ Using first order Lagrange elements, we have that the discretization is equivale
         u_{i+1} - u_{i-1}
     \right] = 0, \quad i = 1, \ldots, N-1,
 \end{equation}
-which for $\mu = 0$ reduces to $u_{i + 1} = u_{i - 1} = u_{i - 3} = \ldots$ and $u_{i + 2} = u_i = u_{i - 2} = u_{i - 4} = \ldots$.
+which for $\mu = 0$ reduces to $u_{i + 1} = u_{i - 1} = \ldots$ and $u_{i + 2} = u_i = u_{i - 2} = \ldots$.
 This is the cause of the oscillations, as if $N$ is odd, then we'll have that all terms of the form $u_{2i} = 0$, while $u_{2i + 1} = 1$, determined by the boundary conditions.
+
+In order to get rid of these oscillations, we can apply upwinding, which amounts to using the approximations
+\begin{equation}
+    \begin{split}
+        \frac{du}{dx}(x_i) &= \frac{1}{h} \left[
+            u_{i+1} - u_{i}
+        \right] \quad \text{if } w < 0, \\
+        \frac{du}{dx}(x_i) &= \frac{1}{h} \left[
+            u_{i} - u_{i-1}
+        \right] \quad \text{if } w > 0.
+    \end{split}
+\end{equation}
+The oscillations will then dissapear, however we are now using a first order scheme, rather than the second order scheme we had with the central finite difference scheme.
+One way to look at this is by noting that
+\begin{equation}
+    \frac{u_i - u_{i-1}}{h} = \frac{u_{i + 1} - u_{i - 1}}{2h} + \frac{h}{2} \frac{-u_{i + 1} + 2u_i - u_{i - 1}}{h^2},
+\end{equation}
+as this shows that we are adding a diffusion term with coefficient $\varepsilon = \frac{h}{2}$ to the equation.
+
+This shows that we are then actually solving the problem
+\begin{equation}
+    -(\mu + \varepsilon) u_{xx} - u_x = f,
+\end{equation}
+as opposed to the original problem.
+
+\subsection{Streamline diffusion/Petrov--Galerkin} % chktex 8
+Streamline diffusion/Petrov--Galerkin (SUPG) methods are a more general and ordered way of dealing with the oscillations we saw in the previous section. % chktex 8
+We then add the diffusion in a consistent way, such that we aren't changing the solution as $h \to 0$.
+
+The Petrov--Galerkin method is maybe unsurprisingly very similar to the standard Galerkin method, given by: % chktex 8
+Find $u_h \in V_{h,g}$ such that
+\begin{equation}
+    a(u_h, v_h) = L(v_h), \quad \forall v_h \in W_{h, 0},
+\end{equation}
+where the difference is that the test space is now different from the trial space.
+
+In matrix form, the Galerkin formulation yields
+\begin{equation}
+    A_{ij} = a(N_i, N_j) = \int_{\Omega} \mu \nabla N_i \cdot \nabla N_j + w \cdot \nabla N_i \, N_j \, \diff x,
+\end{equation}
+while the Petrov--Galerkin formulation yields % chktex 8
+\begin{equation}
+    A_{ij} = a(N_i, L_j) = \int_{\Omega} \mu \nabla N_i \cdot \nabla L_j + w \cdot \nabla N_i \, L_j \, \diff x,
+\end{equation}
+where $L_j$ is the test function.
+Choosing the functions $L_j$ carefully is the key to adding diffusion in a consistent way.
+
+We let $L_j = N_j + \beta h (w \cdot \nabla N_j)$.
+This gives us
+\begin{align*}
+    A_{ij} &= a(N_i, N_j + \beta h (w \cdot \nabla N_j)) \\
+    &= \int_{\Omega} \mu \nabla N_i \cdot (N_j + \beta h w \cdot \nabla N_j) \, \diff x + \int_{\Omega} w \cdot \nabla N_i (N_j + \beta h (w \cdot \nabla N_j)) \, \diff x \\
+    &= \underbrace{
+        \int_{\Omega} \mu \nabla N_i \cdot N_j \, \diff x
+        + \int_{\Omega} w \cdot \nabla N_i \, N_j \, \diff x
+    }_{\text{Standard Galerkin term}} \\
+    &\quad + \underbrace{
+        \beta h
+        \int_{\Omega} \mu \nabla N_i \cdot \nabla (w \cdot \nabla N_j) \, \diff x
+    }_{\text{Vanishes for linear elements}}
+    + \underbrace{
+        \beta h
+        \int_{\Omega} (w \cdot \nabla N_i) (w \cdot \nabla N_j) \, \diff x
+    }_{\text{Artificial diffusion in $w$ direction}}.
+\end{align*}
+The right hand side also changes, denoting the linear form now as $b(L_j)$, such that we have
+\begin{equation}
+    b(L_j)
+    = \int_{\Omega} f L_j \, \diff x
+    = \int_{\Omega} f (N_j + \beta h (w \cdot \nabla N_j)) \, \diff x.
+\end{equation}
+We are in other words changing both sides of the equation, such that the artifical diffusion is consistent.
+
+\subsection{Cea's lemma}
+Cea's lemma states that, given the conditions for Lax--Milgram are satisfied, we have % chktex 8
+\begin{equation}
+    \norm{u - u_h}_{V} \leq \frac{C B}{\alpha} h^t \norm{u}_{t + 1}.
+\end{equation}
+where $B$ comes the polynomial approximation properties, and $\alpha$ and $C$ are the constants from the Lax--Milgram theorem. % chktex 8
+For convection-dominated problems, $\frac{C}{\alpha}$ is large, which causes poor approximation on coarse grids.
+
+In order to get improved error estimates for the SUPG method, we utilize an alternative norm, given by
+\begin{equation}
+    \norm{u}_{sd} = (h \norm{w \cdot \nabla u}^2 + \mu \abs{\nabla u}^2)^{1/2}.
+\end{equation}
+Given that the conditions for Lax--Milgram still hold, solving the SUPG problem on a finite element space of order 1 gives us % chktex 8
+\begin{equation}
+    \norm{u - u_h}_{sd} \leq C h^{3/2} \norm{u}_2.
+\end{equation}
+The norm $\norm{u}_{sd}$ is called the \textit{streamline diffusion} norm.
+
+The proof for this is very involved, and I'd rather not to too much into detail about it.
+One thing to note however is that this error bound is independent of the convection velocity, which is a big improvement over the standard Galerkin method.
