Begin stokes, ponder Brezzi

--- a/exam_prep/question_1.tex
+++ b/exam_prep/question_1.tex
@@ -7,7 +7,7 @@ Consider extensions to e.g.\ convection-diffusion equation and the elasticity eq
 Derive \textit{a priori} error estimates in terms of Cea's lemma for the finite element method in the energy norm.
 Describe how to perform an estimation of convergence rates.
 
-\subsection{Weak formulation}
+\subsection{Weak form of the Poisson equation}
 The Poisson problem with a variable coefficient $\kappa$ is given by
 \begin{equation}
     \begin{split}
