--- a/exam_prep/question_2.tex
+++ b/exam_prep/question_2.tex
@@ -1,7 +1,7 @@
 \section{Discretization of Convection-Diffusion}
 Derive a proper variational formulation of the convection-diffusion problem.
 Derive sufficient conditions that make the problem well-posed.
-Discuss why oscillations appear for standard Galerking methods and show how SUPG methods resolve these problems.
+Discuss why oscillations appear for standard Galerkin methods and show how SUPG methods resolve these problems.
 Discuss also approximation properties in light of Cea's lemma.
 
 \subsection{Weak form of the Convection-Diffusion equation}
