--- a/exam_prep/main.tex
+++ b/exam_prep/main.tex
@@ -31,6 +31,7 @@
 
 \sectionfont{\scshape\mdseries\large}
 \subsectionfont{\centering\scshape\bfseries\normalsize}
+\subsubsectionfont{\centering\bfseries\small}
 \numberwithin{equation}{section}
 
 \colorlet{myred}{red!20}
