--- a/exam_prep/question_3.tex
+++ b/exam_prep/question_3.tex
@@ -114,7 +114,7 @@ For a saddle point problem of the form \cref{eq:stokes-fem} to be well-posed, we
             \quad
             \forall u_h \in Z_h,
         \end{equation}
-        where $Z_h = \{ u_h \in V_h | b(u_h, q_h) = 0 \forall q_h \in Q_h \}$.
+        where $Z_h = \{ u_h \in V_h | b(u_h, q_h) = 0 \, \forall q_h \in Q_h \}$.
 
     \item ``Coercivity'' of $b$:
         \begin{equation}
@@ -123,8 +123,181 @@ For a saddle point problem of the form \cref{eq:stokes-fem} to be well-posed, we
             }{
                 \norm{u_h}_{V_h}
             } \geq C_4 \norm{q_h}_{Q_h}
+            > 0
             \quad
             \forall q_h \in Q_h.
         \end{equation}
 \end{enumerate}
 The first three conditions are easily verified for Stokes problem, while the last one is difficult unless the elements are designed specifically to meet this condition.
+As the first three a rather simple, they are included here for completeness.
+
+\subsubsection{Boundedness of \texorpdfstring{$a$}{a}}
+Let $u_h, v_h \in V_h$.
+Then we have by the Cauchy--Schwarz inequality % chktex 8
+\begin{equation}
+    a(u_h, v_h)
+    = \int_{\Omega} \nabla u_h : \nabla v_h \, \diff x
+    \leq \norm{\nabla u_h}_{L^2} \norm{\nabla v_h}_{L^2}
+    \leq \norm{u_h}_1 \norm{v_h}_1.
+\end{equation}
+This shows that $a$ is bounded, with $C_1 = 1$.
+
+\subsubsection{Boundedness of \texorpdfstring{$b$}{b}}
+Let $u_h \in V_h$ and $q_h \in Q_h$.
+We again utilize Cauchy--Schwarz inequality in order to show the bound, as % chktex 8
+\begin{equation}
+    b(u_h, q_h)
+    = \int_{\Omega} q_h (\nabla \cdot u_h) \, \diff x
+    \leq \norm{q_h}_{L^2} \norm{\nabla \cdot u_h}_{L^2}
+    \leq \norm{q_h}_{L^2} \norm{u_h}_{1}.
+\end{equation}
+The tricky portion here is to bound $\norm{\nabla \cdot u_h}_{L^2} \leq \norm{u_h}_{1}$, however we can actually do it without a coefficient, according to Kent.
+
+\subsubsection{Coercivity of \texorpdfstring{$a$}{a}}
+Finally, let $u_h \in V_h$.
+Then, we simply have
+\begin{equation}
+    a(u_h, u_h)
+    = \int_{\Omega} \nabla u_h : \nabla u_h \diff x
+    = \norm{\nabla u_h}_{L^2}^2
+    \geq C_3 \norm{u_h}_1,
+\end{equation}
+where we can find $C_3$ as the norms are equivalent on $H^1_0$.
+
+\subsection{Oscillations in the pressure}
+The simplest case where we discover oscillations in the pressure, is in Poiseuille flow.
+The analytical solution here is given by
+\begin{equation}
+    u = (y(1 - y), 0)
+    \quad\text{and}\quad
+    p = 1 - x.
+\end{equation}
+We choose this problem as the solution is known, which simplifies the analysis.
+
+We then discretize the problem in a similarly simple manor, with linear Lagrange elements for velocity and pressure.
+What we would see then when we solve the problem is that the velocity is well-represented, while there are wild oscillations present in the pressure.
+If we had chosen quadratic elements in the velocity however, both the velocity and the pressure would be captured accurately.
+
+The reason for the appearance of the oscillations with the $P_1$--$P_1$ elements stems from the fact that they are not \textit{inf-sup} stable.
+That is, they do not fulfill the fourth Brezzi condition.
+The $P_{2}$--$P_{1}$ elements however fulfill this, resulting in a nice solution.
+
+\subsection{inf-sup and approximation}
+In order to obtain order optimal convergence rates, we require that the $\inf$-$\sup$ condition,
+\begin{equation}
+    \inf_{p \in Q_h} \sup_{v \in V_{h, g}} \frac{(p, \nabla \cdot v)}{\norm{v}_1 \norm{p}_0}
+    \geq \beta
+    > 0,
+\end{equation}
+is satisfied.
+When this is satisfied, we get convergence
+\begin{equation}
+    \norm{u - u_h}_1 + \norm{p - p_h}_0
+    \leq C h^k \norm{u}_{k+1} + D h^{\ell + 1} \norm{p}_{\ell + 1},
+\end{equation}
+where $k$ and $\ell$ are the polynomial degree of the velocity and pressure respectively.
+Let's see how this is reflected in the approximations of a couple elements.
+
+\subsubsection{The Taylor--Hood element} % chktex 8
+For the Taylor--Hood element, we have $u \in P_2$ and $p \in P_1$, subject to the restriction that they are continuous across elements. % chktex 8
+This element satisfies the $\inf$-$\sup$ condition, and we can therefore directly get the approximation property
+\begin{equation}
+    \norm{u - u_h}_1 + \norm{p - p_h}_0
+    \leq C h^2 (\norm{u}_3 + \norm{p}_2).
+\end{equation}
+For the generalized $P_{k}$--$P_{k-1}$ Taylor--Hood element, we similarly get % chktex 8
+\begin{equation}
+    \norm{u - u_h}_1 + \norm{p - p_h}_0
+    \leq C h^k (\norm{u}_{k+1} + \norm{p}_k).
+\end{equation}
+
+\subsubsection{The Crouzeix--Raviart element} % chktex 8
+The Crouzeix--Raviart element also satisfies the $\inf$-$\sup$ condition, and are given by $u \in P_1$ and $p \in P_0$. % chktex 8
+Here, $u$ is \emph{only} continuous in the mid-point of each side, and $p$ is discontinuous.
+We then get the error estimate
+\begin{equation}
+    \norm{u - u_h}_1 + \norm{p - p_h}_0
+    \leq C h (\norm{u}_2 + \norm{p}).
+\end{equation}
+It is $\inf$-$\sup$ stable with our formulation of Stokes problem, however if we replace it with the more physically correct formulation
+\begin{equation}
+    -\nabla \cdot \epsilon(u) - \nabla p = f,
+\end{equation}
+where $\epsilon(u) = \frac{1}{2} (\nabla + \nabla^T)$ is the symmetric gradient, it cannot be used.
+We can generalize the element to odd degrees, but not even.
+
+\subsubsection{The Mini element}
+The Mini element is linear in velocity and pressure, however it contains an extra degree of freedom in the velocity which is zero on all edges, dubbed a bubble function.
+For instance in the 2D case, the bubble function, on the reference triangle, is given by
+\begin{equation}
+    b(x, y) = xy(1 - x - y).
+\end{equation}
+This yields the error estimate
+\begin{equation}
+    \norm{u - u_h}_1 + \norm{p - p_h}_0
+    \leq
+    C_0 h \norm{u}_2 + C_1 h^2 \norm{p}_2.
+\end{equation}
+Note that the convergence in the velocity is linear, meaning that adding the bubble function brought stability, but not an increase in approximation order.
+
+\subsection{Stability without inf-sup}
+When stabilizing, we typically replace a system of the form
+\begin{equation}
+    \begin{split}
+        Au + B^T p &= f \\
+        B u &= 0,
+    \end{split}
+\end{equation}
+with a system
+\begin{equation}
+    \begin{split}
+        Au + B^T p &= f \\
+        B u - \epsilon Dp &= \epsilon d,
+    \end{split}
+\end{equation}
+where $D$ is a positive, but not necessarily positive definite, matrix.
+We obtain a nonsingular system, as multiplying the first equation by $A^{-1}$ and factoring yields
+\begin{equation}
+    \begin{split}
+        u + A^{-1} B^T p &= A^{-1} f \\
+        \underbrace{B u}_{\text{Insert second equation}} &= B A^{-1} f - B A^{-1} B^T p \\
+        \epsilon d + \epsilon D p &= B A^{-1} f - B A^{-1} B^T p \\
+        (B A^{-1} B^T + \epsilon D)p &= BA^{-1} f - \epsilon d,
+    \end{split}
+\end{equation}
+and $(B A^{-1} B^T + \epsilon D)$ is nonsingular if $D$ is nonsingular, as both components are positive.
+
+Solving for $p$ in the second equation we get
+\begin{equation}
+    \begin{split}
+        \epsilon D p &= Bu - \epsilon d \\
+        p &= (\epsilon D)^{-1} (Bu - \epsilon d),
+    \end{split}
+\end{equation}
+and inserting this into the second equation yields
+\begin{equation}
+    \begin{split}
+        Au + B^T (\epsilon D)^{-1} (Bu - \epsilon d) &= f \\
+        \left( A + \frac{1}{\epsilon} B^T D^{-1} B \right) u &= f + D^{-1} d.
+    \end{split}
+\end{equation}
+Then, $\left( A + \frac{1}{\epsilon} B^T D^{-1} B \right)$ is nonsingular as $A$ is invertible, and $B^T D^{-1} B$ is positive.
+
+The question is then how to choose $D$, and we have a couple of options.
+The three main techiques are:
+\begin{enumerate}
+    \item
+        Pressure stabilization, by choosing $\nabla \cdot v + \epsilon \Delta p = 0$.
+        This is motivated through the convection-diffusion equation.
+        This sets $D = A$.
+
+    \item
+        Penalty method, by choosing $\nabla \cdot v + \epsilon p = 0$.
+        Typically one then chooses the Velocity-Schur complement.
+        This sets $D = M$.
+
+    \item
+        Artificial compressibility, by choosing $\nabla \cdot -\epsilon \frac{\partial p}{\partial t}$.
+        This is practical as it allows for time stepping.
+        This sets $D = \frac{1}{\Delta t} M$.
+\end{enumerate}
